tests/spec/parse/snapshots/shorthand_struct_in_nested_if_condition.snap
---
source: tests/spec/parse/mod.rs
description: |
  
  struct Point { x: int }
  fn test(foo: int, other: Point) {
    let x = 1;
    let ok = foo < if Point { x } == other { 1 } else { 0 };
  }
---
[
    Struct {
        doc: None,
        attributes: [],
        name: "Point",
        name_span: Span {
            file_id: 0,
            byte_offset: 8,
            byte_length: 5,
        },
        generics: [],
        fields: Record(
            [
                StructFieldDefinition {
                    doc: None,
                    name: "x",
                    name_span: Span {
                        file_id: 0,
                        byte_offset: 16,
                        byte_length: 1,
                    },
                    annotation: Constructor {
                        name: "int",
                        params: [],
                        span: Span {
                            file_id: 0,
                            byte_offset: 19,
                            byte_length: 3,
                        },
                    },
                    visibility: Private,
                    ty: Var {
                        id: uninferred,
                    },
                    kind: Named {
                        attributes: [],
                    },
                },
            ],
        ),
        visibility: Private,
        span: Span {
            file_id: 0,
            byte_offset: 1,
            byte_length: 23,
        },
    },
    Function {
        doc: None,
        attributes: [],
        name: "test",
        name_span: Span {
            file_id: 0,
            byte_offset: 28,
            byte_length: 4,
        },
        generics: [],
        params: [
            Binding {
                pattern: Identifier {
                    identifier: "foo",
                    span: Span {
                        file_id: 0,
                        byte_offset: 33,
                        byte_length: 3,
                    },
                    binding: None,
                },
                annotation: Some(
                    Constructor {
                        name: "int",
                        params: [],
                        span: Span {
                            file_id: 0,
                            byte_offset: 38,
                            byte_length: 3,
                        },
                    },
                ),
                ty: Var {
                    id: uninferred,
                },
            },
            Binding {
                pattern: Identifier {
                    identifier: "other",
                    span: Span {
                        file_id: 0,
                        byte_offset: 43,
                        byte_length: 5,
                    },
                    binding: None,
                },
                annotation: Some(
                    Constructor {
                        name: "Point",
                        params: [],
                        span: Span {
                            file_id: 0,
                            byte_offset: 50,
                            byte_length: 5,
                        },
                    },
                ),
                ty: Var {
                    id: uninferred,
                },
            },
        ],
        return_annotation: Unknown,
        return_type: Var {
            id: uninferred,
        },
        visibility: Private,
        body: Definition(
            Block {
                items: [
                    Let {
                        binding: Binding {
                            pattern: Identifier {
                                identifier: "x",
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 65,
                                    byte_length: 1,
                                },
                                binding: None,
                            },
                            annotation: None,
                            ty: Var {
                                id: uninferred,
                            },
                        },
                        value: Literal {
                            literal: Integer {
                                value: 1,
                                text: None,
                            },
                            ty: Var {
                                id: uninferred,
                            },
                            span: Span {
                                file_id: 0,
                                byte_offset: 69,
                                byte_length: 1,
                            },
                        },
                        mode: Plain,
                        ty: Var {
                            id: uninferred,
                        },
                        span: Span {
                            file_id: 0,
                            byte_offset: 61,
                            byte_length: 9,
                        },
                    },
                    Let {
                        binding: Binding {
                            pattern: Identifier {
                                identifier: "ok",
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 78,
                                    byte_length: 2,
                                },
                                binding: None,
                            },
                            annotation: None,
                            ty: Var {
                                id: uninferred,
                            },
                        },
                        value: Binary {
                            operator: LessThan,
                            left: Identifier {
                                value: "foo",
                                ty: Var {
                                    id: uninferred,
                                },
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 83,
                                    byte_length: 3,
                                },
                                resolution: Unresolved,
                            },
                            right: If {
                                condition: Binary {
                                    operator: Equal,
                                    left: StructCall {
                                        name: "Point",
                                        field_assignments: [
                                            StructFieldAssignment {
                                                name: "x",
                                                name_span: Span {
                                                    file_id: 0,
                                                    byte_offset: 100,
                                                    byte_length: 1,
                                                },
                                                value: Identifier {
                                                    value: "x",
                                                    ty: Var {
                                                        id: uninferred,
                                                    },
                                                    span: Span {
                                                        file_id: 0,
                                                        byte_offset: 100,
                                                        byte_length: 1,
                                                    },
                                                    resolution: Unresolved,
                                                },
                                            },
                                        ],
                                        spread: None,
                                        ty: Var {
                                            id: uninferred,
                                        },
                                        span: Span {
                                            file_id: 0,
                                            byte_offset: 92,
                                            byte_length: 11,
                                        },
                                    },
                                    right: Identifier {
                                        value: "other",
                                        ty: Var {
                                            id: uninferred,
                                        },
                                        span: Span {
                                            file_id: 0,
                                            byte_offset: 107,
                                            byte_length: 5,
                                        },
                                        resolution: Unresolved,
                                    },
                                    ty: Var {
                                        id: uninferred,
                                    },
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 92,
                                        byte_length: 20,
                                    },
                                },
                                consequence: Block {
                                    items: [
                                        Literal {
                                            literal: Integer {
                                                value: 1,
                                                text: None,
                                            },
                                            ty: Var {
                                                id: uninferred,
                                            },
                                            span: Span {
                                                file_id: 0,
                                                byte_offset: 115,
                                                byte_length: 1,
                                            },
                                        },
                                    ],
                                    ty: Var {
                                        id: uninferred,
                                    },
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 113,
                                        byte_length: 5,
                                    },
                                },
                                alternative: Some(
                                    Block {
                                        items: [
                                            Literal {
                                                literal: Integer {
                                                    value: 0,
                                                    text: None,
                                                },
                                                ty: Var {
                                                    id: uninferred,
                                                },
                                                span: Span {
                                                    file_id: 0,
                                                    byte_offset: 126,
                                                    byte_length: 1,
                                                },
                                            },
                                        ],
                                        ty: Var {
                                            id: uninferred,
                                        },
                                        span: Span {
                                            file_id: 0,
                                            byte_offset: 124,
                                            byte_length: 5,
                                        },
                                    },
                                ),
                                ty: Var {
                                    id: uninferred,
                                },
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 89,
                                    byte_length: 40,
                                },
                            },
                            ty: Var {
                                id: uninferred,
                            },
                            span: Span {
                                file_id: 0,
                                byte_offset: 83,
                                byte_length: 46,
                            },
                        },
                        mode: Plain,
                        ty: Var {
                            id: uninferred,
                        },
                        span: Span {
                            file_id: 0,
                            byte_offset: 74,
                            byte_length: 55,
                        },
                    },
                ],
                ty: Var {
                    id: uninferred,
                },
                span: Span {
                    file_id: 0,
                    byte_offset: 57,
                    byte_length: 75,
                },
            },
        ),
        ty: Var {
            id: uninferred,
        },
        span: Span {
            file_id: 0,
            byte_offset: 25,
            byte_length: 107,
        },
    },
]
